--- a/deploy/clowdapp.yaml
+++ b/deploy/clowdapp.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: ccx-sha-extractor
+  name: sha-extractor
 objects:
 
 
@@ -10,25 +10,25 @@ objects:
   apiVersion: autoscaling/v1
   metadata:
     labels:
-      app: ccx-data-pipeline
-    name: ccx-sha-extractor
+      app: ocp-vulnerability
+    name: sha-extractor
   spec:
     minReplicas: ${{MIN_REPLICAS}}
     maxReplicas: ${{MAX_REPLICAS}}
     scaleTargetRef:
       apiVersion: apps/v1
       kind: Deployment
-      name: ccx-sha-extractor-instance
+      name: sha-extractor-instance
     targetCPUUtilizationPercentage: 50
 
 - apiVersion: cloud.redhat.com/v1alpha1
   kind: ClowdApp
   metadata:
-    name: ccx-sha-extractor
+    name: sha-extractor
   spec:
     envName: ${ENV_NAME}
     testing:
-      iqePlugin: ccx
+      iqePlugin: ocp-vulnerability
     deployments:
       - name: instance
         minReplicas: ${{MIN_REPLICAS}}
@@ -57,7 +57,7 @@ objects:
               valueFrom:
                 secretKeyRef:
                   key: dsn
-                  name: ccx-sha-extractor-dsn
+                  name: sha-extractor-dsn
                   optional: true
             - name: SENTRY_ENVIRONMENT
               value: ${ENV_NAME}
@@ -121,11 +121,11 @@ objects:
             periodSeconds: 10
           volumeMounts:
             - mountPath: /data
-              name: ccx-sha-extractor-config
+              name: sha-extractor-config
           volumes:
             - configMap:
-                name: ccx-sha-extractor-config-map
-              name: ccx-sha-extractor-config
+                name: sha-extractor-config-map
+              name: sha-extractor-config
           resources:
             requests:
               cpu: ${CPU_REQUEST}
@@ -152,8 +152,8 @@ objects:
   apiVersion: v1
   metadata:
     labels:
-      app: ccx-sha-extractor
-    name: ccx-sha-extractor-config-map
+      app: sha-extractor
+    name: sha-extractor-config-map
   data:
     config.yaml: |-
       plugins:
@@ -246,22 +246,22 @@ objects:
       prometheus.io/port: "8000"
       prometheus.io/scheme: http
       prometheus.io/scrape: "true"
-    name: ccx-sha-extractor-prometheus-exporter
+    name: sha-extractor-prometheus-exporter
     labels:
-      app: ccx-sha-extractor
+      app: sha-extractor
   spec:
     ports:
-      - name: ccx-sha-extractor-port-metrics
+      - name: sha-extractor-port-metrics
         port: 8000
         protocol: TCP
         targetPort: 8000
     selector:
-      app: ccx-sha-extractor
+      app: sha-extractor
 
 parameters:
 - description: Image name
   name: IMAGE
-  value: quay.io/cloudservices/ccx-sha-extractor
+  value: quay.io/cloudservices/sha-extractor
 - description: Image tag
   name: IMAGE_TAG
   required: true
@@ -298,7 +298,7 @@ parameters:
   value: platform.payload-status
   required: true
 - name: CDP_GROUP_ID
-  value: ccx_sha_extractor_app
+  value: sha_extractor_app
   required: true
 - name: CDP_CONSUMER_SERVER
   value: mq-kafka:29092
@@ -314,4 +314,4 @@ parameters:
   value: "false"
   required: true
 - name: CSE_LOG_STREAM
-  value: "ccx-sha-extractor"
+  value: "sha-extractor"
